<resources>
    <string name="app_name">PopuMovies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sort">Sort by...</string>
    <string name="action_sort_popularity">Popularity</string>
    <string name="action_sort_vote_average">Vote Average</string>
    <string name="sort_popularity">popular</string>
    <string name="sort_votes">top_rated</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">popumovies.com</string>
    <string name="content_authority">com.popumovies</string>
    <string name="vote_avg_string">/10</string>
    <string name="action_favorites">Favorites</string>
    <string name="pref_filter_label">filter</string>
    <string name="button_favorite_label">Toggle Favorite</string>
    <string name="label_button_favorite">TOGGLE FAVORITE</string>
    <string name="label_button_dismiss">Got it</string>
    <string name="label_text_swipehelp">Swipe right or left to move through the list</string>
    <string name="pref_swipehelp_label">swipehelp</string>
    <string name="label_title_trailers">Trailers</string>
    <string name="debug_text">Every child comes into the world full of promise, and none more so than chappie: he is gifted, special, a prodigy. Chappie he is a robot</string>
    <string name="label_title_review">Reviews</string>
    <string name="label_areviewby">"A review by:  %1$s"</string>
    <string name="youtube_not_available">Youtube app must be installed. Technical error is: </string>
</resources>
