<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:icon="@drawable/ic_sort_variant"
        app:showAsAction="ifRoom|collapseActionView" android:title="@string/action_sort">
        <menu>
            <item android:id="@+id/action_sort_popularity"
                android:title="@string/action_sort_popularity"
                android:checkable="true" android:checked="false" />
            <item android:id="@+id/action_sort_votes"
                android:title="@string/action_sort_vote_average"
                android:checkable="true" android:checked="false"/>
            <item android:id="@+id/action_favorites"
                android:title="@string/action_favorites"
                android:checkable="true" android:checked="false"/>
        </menu>
     </item>
    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        app:showAsAction="never" android:icon="@drawable/ic_refresh_white_24dp"/>
</menu>
